// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-for > basic v-for 1`] = `
"import { children as _children, on as _on, renderEffect as _renderEffect, setText as _setText, createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n1 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    const { 0: [n3],} = _children(n2)
    _on(n3, "click", () => $event => (_ctx.remove(_block.s[0])))
    _renderEffect(() => {
      const [item] = _block.s
      _setText(n3, item)
    })
    return n2
  })
  return [n1]
}"
`;

exports[`compiler: v-for > multi effect 1`] = `
"import { children as _children, renderEffect as _renderEffect, setDynamicProp as _setDynamicProp, createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n1 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    const { 0: [n3],} = _children(n2)
    _renderEffect(() => {
      const [item, index] = _block.s
      _setDynamicProp(n3, "item", item)
    })
    _renderEffect(() => {
      const [item, index] = _block.s
      _setDynamicProp(n3, "index", index)
    })
    return n2
  })
  return [n1]
}"
`;

exports[`compiler: v-for > w/o value 1`] = `
"import { createFor as _createFor, template as _template } from 'vue/vapor';
const t0 = _template("<div>item</div>")

export function render(_ctx) {
  const n1 = _createFor(() => (_ctx.items), (_block) => {
    const n2 = t0()
    return n2
  })
  return [n1]
}"
`;
